# Math498-Project-clean

./: .gitignore  README.md  analysis.py  config.py  data.py  main.py  model.py  notebook.ipynb  pyproject.toml  sae.py  strong_post.txt  trainer.py  utlis.py  weak_post.txt
State/: analysis.py
models/: model.py  trainer.py
others/: BERT.py  mainnotebook.ipynb
top_posts/: strong_features.json  weak_features.json
