[project]
name = "math498-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "huggingface-hub>=1.10.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "sae-lens>=6.43.0",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.3",
]
